--- a/notes.org
+++ b/notes.org
@@ -68,43 +68,38 @@ Maxscore: 3277920293
 
 ** Day 11
 
-For a given size *s* and Grid size *S*. The number of calculations for finding maximum power withing a square of size *s* is (S - s)(S - s) (s*s -1).
-Looking at the distribution of this as s changes we have
-#+BEGIN_SRC R :var name="day11-cals.jpeg" :results file
-    jpeg(filename=name,
-	 width=640, height=480, units="px", pointsize=12,
-	 quality=75,
-	 bg="white", res=NA)
-    size <- seq(1, 300)
-    cals <- (300 - size)^2 * (size^2 - 1)
-    barplot(cals, xlab="Power square size", ylab="Number of calculations",
-	    main="Without optimization")
-    name
-#+END_SRC
+For a given size *s* and Grid size *S*. The number of calculations for finding maximum power withing a square of size *s* is \( (S - s)^2 \times (s\times s -1) \).
 
-#+RESULTS:
-[[file:day11-cals.jpeg]]
 
 This implementation runs for tens of minutes without reaching size 100, so it will likely run for more than an hour.
 
-Given that there are no more than 300*300 elements in the grid, there are a lot of redundant calculations taking place. For any give power square size *s*, the calculations are always sequential additions. So if we accumulate the sum of all previous rows in each cell of the grid, the sum of a give power square is the sum of row-sums, row-sums are the difference b/w the last cell and cell-before first. so we can cut down the number of calculations to (S-s)^2 * (2*s - 1), an order less.
+Given that there are no more than 300*300 elements in the grid, there are a lot of redundant calculations taking place. For any give power square size *s*, the calculations are always sequential additions. So if we accumulate the sum of all previous columns in each cell of the grid, the sum of a given power square is the sum of row-sums, row-sums are the difference b/w the last cell and cell-before first. so we can cut down the number of calculations to \( (S - s)^2 \times (2 \times s - 1) \), an order less.
 
-#+BEGIN_SRC R :results file :var fname="day11-calls-best.jpeg"
+#+BEGIN_SRC R :results file :var fname="day11-cals-best.jpeg" :exports both
   jpeg(filename=fname,
        width=640, height=480, units="px", pointsize=12,
        quality=75,
        bg="white", res=NA)
   size <- seq(1, 300)
+  calsBad <- (300 - size)^2 * (size^2 - 1)
   cals <- (300 - size)^2 * (2*size - 1)
-  barplot(cals, xlab="Power square size", ylab="Number of calculations",
-	  main="Using accumulations to reduce per square cals from O(n^2) to O(n)")
+  plot(size, calsBad, xlab="Power square size", ylab="Number of calculations",
+       col="red", pch=19,
+       main="Operations for a given square size",
+       ylim=range(c(calsBad, cals)))
+  par(new = TRUE)
+  plot(size, cals, xlab="Power square size", ylab="Number of calculations",
+       col="green", pch=20,
+       ylim=range(c(calsBad, cals)))
+  legend(x="topleft", legend=c("Unoptimized", "Optimized"),
+	 col=c("red", "green"), pch=c(19, 20))
   fname
 #+END_SRC
 
 #+RESULTS:
-[[file:day11-calls-best.jpeg]]
+[[file:day11-cals-best.jpeg]]
 
-The run time for this implementation is
+The run time for the improved implementation is around 51 secs.
 #+BEGIN_EXAMPLE
   CL-USER> (time (part2 1309))
   Evaluation took:
