--- a/notes.org
+++ b/notes.org
@@ -153,3 +153,85 @@ Setting the array allocation to (unsigned-byte 4) for 4 bits of space worked out
   
   20254833
 #+END_EXAMPLE
+
+** Day 15
+[2018-12-16 Sun]
+First example works out perfectly.
+#+BEGIN_EXAMPLE
+  #######
+  #G....#
+  #.G...#
+  #.#.#G#
+  #...#.#
+  #....G#
+  #######
+  (5 . 5) G[200]
+  (2 . 2) G[131]
+  (5 . 3) G[59]
+  (1 . 1) G[200]
+  Elves: 0 Goblins: 4
+
+  47
+#+END_EXAMPLE
+For the second example my solution takes 38(37) rounds and one elf health is 188(185). So I'm missing an attack turn somewhere. The last goblin should have died one turn earlier and the elf should have taken one more hit.
+#+BEGIN_EXAMPLE
+  #######
+  #...#E#
+  #E#...#
+  #.E##.#
+  #E..#E#
+  #.....#
+  #######
+  (5 . 1) E[200]
+  (2 . 3) E[188]
+  (1 . 4) E[200]
+  (1 . 2) E[197]
+  (5 . 4) E[200]
+  Elves: 5 Goblins: 0
+
+  38
+#+END_EXAMPLE
+For the third example my solution takes 51(46) rounds and all elves survive. Where as in the example one elf dies. The whole movement pattern seems to be wrong. I should recheck my path finding algorithms. 
+#+BEGIN_EXAMPLE
+  #######
+  #.E.E.#
+  #.#..E#
+  #E.##E#
+  #.E.#.#
+  #...#.#
+  #######
+  (4 . 1) E[50]
+  (5 . 2) E[200]
+  (1 . 3) E[98]
+  (5 . 3) E[200]
+  (2 . 4) E[200]
+  (2 . 1) E[98]
+  Elves: 6 Goblins: 0
+
+  51
+#+END_EXAMPLE
+Fifth example isn't terminating quickly.
+
+I need to spend more time in writing a robust path finding algorithm.
+
+** Day16
+I wanted to write all opcode functions as macro definitions.
+Something like
+#+BEGIN_SRC lisp
+  (defop "mulr" (a b c) (seti c (* (reg a) (reg b))))
+  (defop "muli" (a b c) (seti c (* (reg a) b)))
+#+END_SRC
+But I'm not familiar enough with macros to do it quickly. So I had to go the symbol searching route to find the matching functions.
+Run times.
+#+BEGIN_EXAMPLE
+  CL-USER> (time (part2 "input_16.txt" "input_16_program.txt"))
+  Evaluation took:
+    0.129 seconds of real time
+    0.128454 seconds of total run time (0.088230 user, 0.040224 system)
+    [ Run times consist of 0.059 seconds GC time, and 0.070 seconds non-GC time. ]
+    99.22% CPU
+    219,413,211 processor cycles
+    16,417,712 bytes consed
+  
+  #(667 667 3 2)
+#+END_EXAMPLE
