--- a/notes.org
+++ b/notes.org
@@ -314,13 +314,13 @@ Instructions are just looping mostly around 3,4,5,6, 8,9,10,11 instructions. Let
   01  seti 1 3 1  reg1 = 1
   02  seti 1 2 4  reg4 = 1
   03  mulr 1 4 5  reg5 = reg4 * reg1
-  04  eqrr 5 2 5  Is reg5 and reg2 equal in reg5
-  05  addr 5 3 3  Increase reg3 value by reg5 amount
-  06  addi 3 1 3  Jump over 7th instruction
-  07  addr 1 0 0  reg0 = reg0 + reg1
-  08  addi 4 1 4  Increase reg4 value
-  09  gtrr 4 2 5  Is reg4 greater than reg2 in reg5
-  10  addr 3 5 3  If reg5 is true goto 12
+  04  eqrr 5 2 5  reg5 eq reg2
+  05  addr 5 3 3  If above true then goto 07
+  06  addi 3 1 3  else goto 08
+  07  addr 1 0 0  reg0 = reg0 + reg1, i.e., accumulate the factor reg1
+  08  addi 4 1 4  reg4++
+  09  gtrr 4 2 5  reg4 > reg2
+  10  addr 3 5 3  If above true goto 12
   11  seti 2 6 3  else goto 02
   12  addi 1 1 1  reg1++
   13  gtrr 1 2 5  reg1 > reg2
@@ -329,4 +329,8 @@ Instructions are just looping mostly around 3,4,5,6, 8,9,10,11 instructions. Let
   16  mulr 3 3 3  End
 #+END_EXAMPLE
 
-After drawing a simple flow chart we can see that this part of the problem is simple finding two numbers reg1 and reg4 such that reg1 * reg4 is reg2, i.e., divisors of reg2. and when it finds them reg0 = reg0 + reg1. So reg0 is sum of all divisors of reg2(10551418).
+After drawing a simple flow chart we can see that this part of the problem is simple finding two numbers reg1 and reg4 such that reg1 * reg4 is reg2, i.e., divisors of reg2. and when it finds them reg0 = reg0 + reg1. So *reg0 is sum of all divisors of reg2* i.e., (10551418).
+
+** Day20
+[2018-12-20 Thu]
+Basic visualization done. Crude path length implementation partly done.
