--- a/notes.org
+++ b/notes.org
@@ -353,38 +353,77 @@ Got it done after a good nights sleep.
 | 4360 | 8509 |
 ** Day21
 #+BEGIN_EXAMPLE
-  00 seti 123 0 3         reg3 = 123
-  01 bani 3 456 3	  reg3 = reg3 & 456
-  02 eqri 3 72 3	  reg3 = reg3 eq 72
-  03 addr 3 2 2		  if above true then jump to 05
-  04 seti 0 0 2		  else jump to 01
-  05 seti 0 5 3		  reg3 = 0
-  06 bori 3 65536 1	  reg1 = reg3 | 65536
-  07 seti 10373714 2 3	  reg3 = 10373714
-  08 bani 1 255 5	  reg5 = reg1 & 255
-  09 addr 3 5 3 	  reg3 = reg3 + reg5
-  10 bani 3 16777215 3	  reg3 = reg3 & 16777215
-  11 muli 3 65899 3  	  reg3 = reg3 * 65899
-  12 bani 3 16777215 3	  reg3 = reg3 & 16777215
-  13 gtir 256 1 5	  reg1 < 256
-  14 addr 5 2 2 	  if above true jump to 16
-  15 addi 2 1 2		  else jump to 17
-  16 seti 27 7 2	  goto 28
-  17 seti 0 3 5		  reg5 = 0
-  18 addi 5 1 4		  reg4 = reg5 + 1
-  19 muli 4 256 4	  reg4 = reg4 * 256
-  20 gtrr 4 1 4 	  reg4 > reg1
-  21 addr 4 2 2		  if above true then jump 23
-  22 addi 2 1 2		  else jump 24
-  23 seti 25 4 2	  goto 26
-  24 addi 5 1 5		  reg5 = reg5 + 1
-  25 seti 17 0 2	  goto 18
-  26 setr 5 2 1		  reg1 = reg5
-  27 seti 7 4 2		  goto 08
-  28 eqrr 3 0 5		  reg3 eq reg0
-  29 addr 5 2 2		  if above true end
-  30 seti 5 7 2		  else goto 06
+  00 seti 123 0 3       reg3 = 123
+  01 bani 3 456 3       reg3 = reg3 & 456
+  02 eqri 3 72 3        reg3 = reg3 eq 72
+  03 addr 3 2 2         if above true then jump to 05
+  04 seti 0 0 2         else jump to 01
+  05 seti 0 5 3         reg3 = 0
+  06 bori 3 65536 1     reg1 = reg3 | 65536
+  07 seti 10373714 2 3  reg3 = 10373714
+  08 bani 1 255 5       reg5 = reg1 & 255
+  09 addr 3 5 3         reg3 = reg3 + reg5
+  10 bani 3 16777215 3  reg3 = reg3 & 16777215
+  11 muli 3 65899 3     reg3 = reg3 * 65899
+  12 bani 3 16777215 3  reg3 = reg3 & 16777215
+  13 gtir 256 1 5       reg1 < 256
+  14 addr 5 2 2         if above true jump to 16
+  15 addi 2 1 2         else jump to 17
+  16 seti 27 7 2        goto 28
+  17 seti 0 3 5         reg5 = 0
+  18 addi 5 1 4         reg4 = reg5 + 1
+  19 muli 4 256 4       reg4 = reg4 * 256
+  20 gtrr 4 1 4         reg4 > reg1
+  21 addr 4 2 2         if above true then jump 23
+  22 addi 2 1 2         else jump 24
+  23 seti 25 4 2        goto 26
+  24 addi 5 1 5         reg5 = reg5 + 1
+  25 seti 17 0 2        goto 18
+  26 setr 5 2 1         reg1 = reg5
+  27 seti 7 4 2         goto 08
+  28 eqrr 3 0 5         reg3 eq reg0
+  29 addr 5 2 2         if above true end
+  30 seti 5 7 2         else goto 06
 
 #+END_EXAMPLE
 
 Look at this program reg0 is not modified and the program halts when reg3 and reg0 are equal. so I just printed out when eqrr instruction is executed. The first invocation value of reg3 is the answer to part1. Given that this piece of program is a mathematical equation to just generate numbers, reg3 value must repeat at some point. The last value to not repeat should be the answer to part2. Now the problem becomes, how to find it. I checked for almost 10 billion executions, but reg3 did not repeat. Is there a more mathematical solution?  
+
+Let us look at the flow chart of this program. r3 is bounded, so it must repeat at some point. The furthest generated value must be the answer to the problem. Now how to find it?
+#+BEGIN_SRC plantuml :file "day21_flow.png" :exports both
+  (*) --> "r3 = 123"
+  --> "r3 = r3 & 456"
+  --> if "r3 == 72" then
+	  -->[true] "r3 = 0"
+  else
+	  -->[false] "r3 = 123"
+  endif	
+  "r3 = 0" --> "r1 = r3 | 65536"
+  --> "r3 = 10373714"
+  --> "r5 = r1 & 255"
+  --> "r3 = r3 + r5"
+  --> "r3 = r3 & 16777215"
+  --> "r3 = r3 * 65899"
+  --> "r3 = r3 & 16777215"
+  --> if "r1 < 256" then
+	  -->[true] if "r3 == r0" then
+		  -->[true] (*)
+	  else
+		  -->[false] "r1 = r3 | 65536"
+	  endif
+  else
+	  -->[false] "r5 = 0"
+  endif
+  "r5 = 0" --> "r4 = r5 + 1"
+  --> "r4 = r4 * 256"
+  --> if "r4 > r1" then
+	  -->[true] "r1 = r5"
+  else
+	  -->[false] "r5 = r5 + 1"
+  endif
+  "r5 = r5 + 1" --> "r4 = r5 + 1"
+  "r1 = r5" --> "r5 = r1 & 255"
+#+END_SRC
+
+#+RESULTS:
+[[file:day21_flow.png]]
